--- a/Home.html
+++ b/Home.html
@@ -2,29 +2,31 @@
 <html>
   <head>
 
-      <meta charset="utf-8">
-      <title>{{{title}}}</title>
-    <body>
+    <meta charset="utf-8">
+    <title></title>
+  <body>
 
-      <header>
+    <header>
 
-        <!-- The <i> tag below includes the sticky note icon from Font Awesome -->
-        <h1><a href="/"><i class="fa fa-bicycle"></i>TheBikeLocker</a></h1>
+      <!-- The <i> tag below includes the sticky note icon from Font Awesome -->
+      <h1><a href="/"><i class="fa fa-bicycle"></i>TheBikeLocker</a></h1>
 
-        <nav>
-          <ul class="navbar-list">
-            <li class="navbar-item"><a href="/Home.html">Home</a></li>
-            <li class="navbar-item"><a href="/Search">Search</a></li>
-            <li class="navbar-item"><a href="/BikeLocker">Stolen Bikes log</a></li>
-            <li class="navbar-item navbar-right"><a href="/ReportBike">Report stolen bike</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul class="navbar-list">
+          <li class="navbar-item"><a href="./Home.html">Home</a></li>
+          <li class="navbar-item"><a href="./Account.html">Account</a></li>
+          <li class="navbar-item"><a href="./stolenBikes.html">Stolen Bikes log</a></li>
+          <li class="navbar-item"><a href="/ReportBike">Report stolen bike</a></li>
 
-      </header>
+          <li class="navbar-item navbar-right"><a href="./About.html">About</a></li>
+        </ul>
+      </nav>
+
+    </header>
 
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" media="screen">
-    <link rel="stylesheet" href="style.css" media="screen">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" media="screen">
+  <link rel="stylesheet" href="style.css" media="screen">
 
   </head>
   <body>
