--- a/About.html
+++ b/About.html
@@ -13,11 +13,11 @@
 
         <nav>
           <ul class="navbar-list">
-            <li class="navbar-item"><a href="./Home.html">Home</a></li>
-            <li class="navbar-item"><a href="./Account.html">Account</a></li>
-            <li class="navbar-item"><a href="./stolenBikes.html">Stolen Bikes log</a></li>
-            <li class="navbar-item"><a href="/ReportBike">Report stolen bike</a></li>
-
+            <li class="navbar-item"><a href="./Home.php">Home</a></li>
+            <li class="navbar-item"><a href="./Account.php">Account</a></li>
+            <li class="navbar-item"><a href="./stolenBikes.php">Stolen Bikes log</a></li>
+            <li class="navbar-item"><a href="./reportStolen.php">Report stolen bike</a></li>
+            <li class="navbar-item"><a href="./signUp.php">Create Account</a></li>
             <li class="navbar-item navbar-right"><a href="./About.html">About</a></li>
           </ul>
         </nav>
